package eapli.base.meeting.domain;

public enum MeetingParticipantState {
    ACCEPT, REJECT,PENDING;
}
