package eapli.base.meeting.domain;

public enum MeetingState {
    ACCEPTED,CANCELED
}
